--- a/themes/hexo-theme-hueman/layout/_partial/head.ejs
+++ b/themes/hexo-theme-hueman/layout/_partial/head.ejs
@@ -51,5 +51,14 @@
     <link href='//fonts.useso.com/css?family=Titillium+Web:300,400,600' rel='stylesheet' type='text/css'>
     <link href="//fonts.useso.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
   <% } %>
-
+  <!--Baidu统计-->
+  <script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "//hm.baidu.com/hm.js?bfcff0521bd2ae815ef083b47acf83de";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
 </head>
