--- a/themes/hexo-theme-hueman/source/css/_partial/header.styl
+++ b/themes/hexo-theme-hueman/source/css/_partial/header.styl
@@ -14,6 +14,7 @@
   clearfix()
   text-align: center
   padding: 30px 0px
+  background:
   .logo-wrap, .subtitle-wrap
     float: left
   .subtitle-wrap
