--- a/themes/hexo-theme-hueman/source/css/_partial/header.styl
+++ b/themes/hexo-theme-hueman/source/css/_partial/header.styl
@@ -1,5 +1,5 @@
 #header
-  background: color-header-background
+  background: url(images/header.jpg) center -180px no-repeat
   padding-bottom: nav-height
   position: relative
 
@@ -14,15 +14,15 @@
   clearfix()
   text-align: center
   padding: 30px 0px
-  background:
   .logo-wrap, .subtitle-wrap
     float: left
   .subtitle-wrap
     padding: 10px 0px 0px
     margin-left: 20px
   .subtitle
+    font-family: "Microsoft YaHei","Hiragino Sans GB W6",hei,Arial,"Lucida Grande",Verdana
     font-size: 16px
     font-style: italic
     line-height: logo-height + 10
-    color: color-nav-foreground
+    color: rgba(255, 255, 255, 1);
     text-shadow: 0 1px rgba(0, 0, 0, 0.2)
