--- a/themes/hexo-theme-hueman/source/css/style.styl
+++ b/themes/hexo-theme-hueman/source/css/style.styl
@@ -29,7 +29,7 @@ html, body, #container
   background: color-link
 
 body
-  background: color-background
+  background: #A9BFDD
   font: font-size font-sans
   -webkit-text-size-adjust: 100%
 
